# sber-hak

./: .gitignore  README.md  api1-2.py  bankParser.py  cards.db  load_bd.py  test2.py
backend/: .env  package-lock.json  package.json
backend/src/: app.module.ts  main.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  jwt.strategy.ts
backend/src/auth/dto/: login.dto.ts
backend/src/database/: database.module.ts
backend/src/entities/feedback/: feedback.controller.ts  feedback.model.ts  feedback.module.ts  feedback.service.ts
backend/src/entities/stats/: stats.controller.ts  stats.model.ts  stats.module.ts  stats.service.ts
backend/src/entities/user/: user.model.ts  users.controller.ts  users.module.ts  users.service.ts
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/ProtectedRoute/: ProtectedRoute.tsx
frontend/src/pages/auth/: AuthPage.module.css  SignInPage.tsx  SignUpPage.tsx
frontend/src/pages/bonus/: BonusPage.module.css  BonusPage.tsx
frontend/src/pages/contract/: Benefit.module.css  ContractPage.module.css  ContractPage.tsx
frontend/src/pages/demo/: DemoPage.module.css  DemoPage.tsx
frontend/src/pages/feedback/: Feedback.module.css  FeedbackPage.module.css  FeedbackPage.tsx  Survay.module.css
frontend/src/pages/idea/: FeedbackIdeaPage.tsx
frontend/src/pages/legal/: DemoLegalPage.tsx
model/: model.ipynb  pyproject.toml
python/: Salary_cards.csv  api1-2.py  api_cards.py  bankParser.py  load_cards.py  output.txt  siberia.db  statistika_dlya_sbera2.csv
(+24 files in other folders)
